feat: Enhance VoiceAlert System with microphone support and improved installation process
- Updated .env.example to include new voice interface settings and audio configurations.
- Revised README.md to reflect changes in installation options and troubleshooting steps.
- Added demo.py to showcase voice conversation flow without CVE monitoring.
- Introduced install_dependencies.py for automatic dependency installation with platform-specific handling.
- Created requirements_minimal.txt for minimal installation without audio dependencies.
- Implemented simple_voice_interface.py for a text-based voice interface as a fallback.
- Developed test_system.py to validate all components of the VoiceAlert System.
- Refactored voice_interface.py to support ElevenLabs TTS and local STT with microphone input.
- Modified voicealert_system.py to integrate microphone-based voice interface or phone caller based on configuration.

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,14 @@ ENGINEER_PHONE_NUMBER=+1234567890
 VOICE_ID=your_elevenlabs_voice_id
 POLL_INTERVAL_MINUTES=5
 LOG_LEVEL=INFO
+
+# Voice Interface Settings
+USE_MICROPHONE=true
+USE_MOCK_VOICE=false
+
+# Optional: ElevenLabs agent for advanced conversation simulation
+# ELEVENLABS_AGENT_ID=your_elevenlabs_agent_id_for_simulation
+
+# Audio Settings (for microphone mode)
+SPEECH_RECOGNITION_TIMEOUT=10
+PHRASE_TIMEOUT=3
